--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -425,9 +425,13 @@ plugins:
     installation:
       priority: 0
       procedures:
+        - python:
+            module: plugins/calico.py
+            method: enrich_original_yaml
         - config:
-            source: 'plugins/yaml/calico-{{ plugins.calico.version|minorversion }}.yaml'
+            source: 'kubemarine/plugins/yaml/calico-{{ plugins.calico.version }}.yaml'
             do_render: False
+#        - template: 'templates/plugins/calico-{{ plugins.calico.version|minorversion }}.yaml.j2'
         - expect:
             daemonsets:
               - calico-node
@@ -526,7 +530,7 @@ plugins:
             name: calico-config
             key: veth_mtu
     cni:
-      image: 'calico/cni:{{ plugins.calico.version }}'
+      image: '{% if plugins.calico.installation.registry is defined and plugins.calico.installation.registry|length %}{{ plugins.calico.installation.registry }}/{% endif %}calico/cni:{{ plugins.calico.version }}'
       ipam:
         ipv4:
           assign_ipv4: 'true'
@@ -542,13 +546,13 @@ plugins:
             - default-ipv6-ippool
           type: calico-ipam
     node:
-      image: 'calico/node:{{ plugins.calico.version }}'
+      image: '{% if plugins.calico.installation.registry is defined and plugins.calico.installation.registry|length %}{{ plugins.calico.installation.registry }}/{% endif %}calico/node:{{ plugins.calico.version }}'
     kube-controllers:
-      image: 'calico/kube-controllers:{{ plugins.calico.version }}'
+      image: '{% if plugins.calico.installation.registry is defined and plugins.calico.installation.registry|length %}{{ plugins.calico.installation.registry }}/{% endif %}calico/kube-controllers:{{ plugins.calico.version }}'
       nodeSelector:
         kubernetes.io/os: linux
     flexvol:
-      image: 'calico/pod2daemon-flexvol:{{ plugins.calico.version }}'
+      image: '{% if plugins.calico.installation.registry is defined and plugins.calico.installation.registry|length %}{{ plugins.calico.installation.registry }}/{% endif %}calico/pod2daemon-flexvol:{{ plugins.calico.version }}'
 
   flannel:
     installation:
