--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: docker build . -t ghcr.io/dmyar21/kubemarine:${{ env.TAG_NAME }}
       - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-      - run: docker push ghcr.io/dmyar21/KubeMarine:${{ env.TAG_NAME }}
+      - run: docker push ghcr.io/dmyar21/kubemarine:${{ env.TAG_NAME }}
