--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker build . -t ghcr.io/dmyar21/kubemarine:${{ env.TAG_NAME }}
+      - run: docker build . -t ghcr.io/dmyar21/kubemarine:latest
       - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
       - run: docker push ghcr.io/dmyar21/kubemarine:${{ env.TAG_NAME }}
       - run: docker push ghcr.io/dmyar21/kubemarine:latest
