--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,8 +55,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker build . -t ghcr.io/dmyar21/kubemarine:${{ env.TAG_NAME }}
-      - run: docker build . -t ghcr.io/dmyar21/kubemarine:latest
+      - run: docker build . -t ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
+      - run: docker build . -t ghcr.io/netcracker/kubemarine:latest
       - run: echo ${{ secrets.GITHUB_TOKEN }} | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
-      - run: docker push ghcr.io/dmyar21/kubemarine:${{ env.TAG_NAME }}
-      - run: docker push ghcr.io/dmyar21/kubemarine:latest
+      - run: docker push ghcr.io/netcracker/kubemarine:${{ env.TAG_NAME }}
+      - run: docker push ghcr.io/netcracker/kubemarine:latest
