--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -32,8 +32,9 @@ services:
         audit-log-path: /var/log/kubernetes/audit/audit.log
         audit-policy-file: /etc/kubernetes/audit-policy.yaml
         audit-log-maxage: "30"
-        audit-log-maxbackup: "5"
-        audit-log-maxsize: "20"
+        audit-log-maxbackup: "10"
+        audit-log-maxsize: "100"
+        kubelet-certificate-authority: /etc/kubernetes/pki/ca.crt
       extraVolumes:
         - name: audit
           hostPath: '{{ services["kubeadm"]["apiServer"]["extraArgs"]["audit-policy-file"] }}'
