--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -445,8 +445,10 @@ compatibility_map:
         version: v3.24.1
         sha1: 5a2e2a391ec76fe0cf144854056b809113cb1432
       v1.24:
-        version: v3.24.1
-        sha1: 5a2e2a391ec76fe0cf144854056b809113cb1432
+        #version: v3.24.1
+        #sha1: 5a2e2a391ec76fe0cf144854056b809113cb1432
+        version: v3.24.2
+        sha1: c4de7a203e5a3a942fdf130bc9ec180111fc2ab6
     nginx-ingress-controller:
       v1.21:
         image-name: ingress-nginx/controller
