--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           path: ./
           requirements: "./requirements.txt"
-      - run: ls -la ./dist/linux/amd64/
+      - run: ./dist/linux/amd64/kubemarine selftest
   unit-tests:
     needs: license
     runs-on: ubuntu-latest
