Inventory JSON schema implementation

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -4,7 +4,7 @@ node_defaults: {}
 
 nodes: []
 
-public_cluster_ip: '{{ control_plain["external"] }}'
+public_cluster_ip: '{{ control_plain.external }}'
 
 services:
   kubeadm_kubelet:
