--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -430,8 +430,8 @@ plugins:
             module: plugins/calico.py
             method: apply_calico_yaml
             arguments:
-              calico_original_yaml: 'kubemarine/plugins/yaml/calico-{{ plugins.calico.version }}.yaml.original'
-              calico_yaml: 'dump/calico-{{ plugins.calico.version }}.yaml'
+              calico_original_yaml: 'plugins/yaml/calico-{{ plugins.calico.version }}.yaml.original'
+              calico_yaml: './dump/calico-{{ plugins.calico.version }}.yaml'
         - expect:
             daemonsets:
               - calico-node
