Build single binary and exe file kubemarine and automation upload  (#270)
* Build single binary and exe file kubemarine and automation upload release asset

* add

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* fix parameters build process

* add new procedures

* add doc

* fix build procedure

* fix build procedure

* fix build procedure

* fix build procedure

* fix build procedure

* fix build procedure

* add workflow build.yaml

* delete latest tag and add selftest binary

* delete latest tag and add selftest binary

* delete latest tag and add selftest binary

* delete latest tag and add selftest binary

* delete latest tag and add selftest binary

* delete latest tag and add selftest binary

* delete latest tag and add selftest binary

* add new information

* add new information

* add new information

* add new information

* update doc

* update doc

* update spec file

Co-authored-by: koryaga <5212888+koryaga@users.noreply.github.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,12 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: Build Binary via Docker
-        run: docker build -t kubemarine --build-arg BUILD_TYPE=binary --no-cache .
+      - name: PyInstaller amd64
+        id: amd64
+        uses: action-python/pyinstaller-py3.8@amd64
+        with:
+          path: ./
+          requirements: "./requirements.txt"
   build-package:
     runs-on: ubuntu-latest
     steps:
