Build Binary via Docker

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,12 +16,8 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: PyInstaller amd64
-        id: amd64
-        uses: action-python/pyinstaller-py3.8@amd64
-        with:
-          path: ./
-          requirements: "./requirements.txt"
+      - name: Build Binary via Docker
+        run: docker build -t kubemarine --build-arg BUILD_TYPE=binary --no-cache .
   build-package:
     runs-on: ubuntu-latest
     steps:
