--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,26 +17,31 @@ jobs:
        - uses: stefanzweifel/git-auto-commit-action@v4
          with:
            commit_message: Auto-update license header
-  selftest-docker:
+  selftest-image:
     needs: license
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: docker build -t kubemarine --no-cache .
-      - run: docker run kubemarine selftest
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Build Docker Image
+        run: docker build -t kubemarine --no-cache .
+      - name: Run Selftest
+        run: docker run kubemarine selftest
   selftest-binary:
     needs: license
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: PyInstaller amd64
-        id: amd64
-        uses: action-python/pyinstaller-py3.8@amd64
-        with:
-          path: ./
-          requirements: "./requirements.txt"
-      - run: ./dist/linux/amd64/kubemarine selftest
+      - name: Build Binary via Docker
+        run: |
+          docker build -t kubemarine --build-arg BUILD_TYPE=binary --no-cache .
+          CONTAINER_ID=$(docker create kubemarine)
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" kubemarine_exe
+          docker rm -v "${CONTAINER_ID}"
+      - name: Run Selftest
+        run: ./kubemarine_exe selftest
+
   unit-tests:
     needs: license
     runs-on: ubuntu-latest
