--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ toml==0.10.*
 python-dateutil==2.8.*
 deepdiff==5.7.*
 paramiko==2.9.*
+jsonschema==4.17.*
 # Unix specific dependencies
 ansible==6.7.*
