--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -374,7 +374,7 @@ services:
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
-          package_name: 'auditd'
+          package_name: 'audit'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
       rhel8:
@@ -405,7 +405,7 @@ services:
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
-          package_name: 'auditd'
+          package_name: 'audit'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
  
