--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -131,6 +131,7 @@ services:
     kernel.panic: 10
     vm.overcommit_memory: 1
     kernel.panic_on_oops: 1
+    fs.may_detach_mounts: 1
 
   etc_hosts:
     127.0.0.1:
