--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,18 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Build Binary via Docker
-        run: docker build -t kubemarine --build-arg BUILD_TYPE=binary --no-cache .
+        run: |
+          docker build -t kubemarine --build-arg BUILD_TYPE=binary --no-cache .
+          CONTAINER_ID=$(docker create kubemarine)
+          mkdir dist
+          docker cp "${CONTAINER_ID}:/opt/kubemarine/dist/kubemarine" dist/kubemarine
+          docker rm -v "${CONTAINER_ID}"
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: kubemarine
+          path: ./dist/kubemarine
+          retention-days: 1
   build-package:
     runs-on: ubuntu-latest
     steps:
