[MANOPD-82392] - add check_iaas tasks for check pakages and repos (#315)
* add check_iaas tasks for check pakages and repos

* fix audit package name for rhel

* skip check repos for multiply os

* add new tasks to guide

* support string repositories in check_iaas

* use RemoteExecutor

* check package associations if needed

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -375,7 +375,7 @@ services:
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
-          package_name: 'auditd'
+          package_name: 'audit'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
       rhel8:
@@ -406,7 +406,7 @@ services:
           config_location: '/etc/keepalived/keepalived.conf'
         audit:
           executable_name: 'auditctl'
-          package_name: 'auditd'
+          package_name: 'audit'
           service_name: 'auditd'
           config_location: '/etc/audit/rules.d/predefined.rules'
  
