--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -16,5 +16,7 @@ jobs:
         run: ip a
       - name: Get user
         run: whoami
+      - name: Get current authorized keys
+        run: sudo cat /home/whoami/.ssh/authorized_keys
       - name: Test ssh connection
         run: ssh 127.0.0.1 echo "Test"
