--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -546,6 +546,17 @@ compatibility_map:
         version: v0.0.22
       v1.25:
         version: v0.0.23
+    busybox:
+      v1.21:
+        version: 1.31.2
+      v1.22:
+        version: 1.31.2
+      v1.23:
+        version: 1.31.2
+      v1.24:
+        version: 1.31.2
+      v1.25:
+        version: 1.31.2
     pause:
       v1.21:
         version: 3.4.1
