--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -22,7 +22,7 @@ jobs:
         run: ssh-keygen -t rsa -b 4096 -N "" -f ~/.ssh/id_rsa -q
       - name: Copy pub key to authorized keys
         run: cp ~/.ssh/id_rsa ~/.ssh/authorized_keys
-      - name: Copy check authorized keys
-        run: cat ~/.ssh/authorized_keys
+      - name: Add host to known
+        run: ssh-keyscan -H 127.0.0.1 >> ~/.ssh/known_hosts
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 127.0.0.1 echo "Test"
