check sshd config

--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -10,19 +10,19 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
-      - name: Check if ssh enabled
-        run: systemctl status ssh
       - name: Check ips
         run: ip a
       - name: Get user
         run: whoami
-      - name: Check if authorized keys exists
-        run: if [ -f "~/.ssh/authorized_keys" ]; then echo "File exists."; else echo "File does not exist."; fi
       - name: Generate ssh key
         run: ssh-keygen -t rsa -b 4096 -N "" -f ~/.ssh/id_rsa -q
       - name: Copy pub key to authorized keys
         run: cp ~/.ssh/id_rsa ~/.ssh/authorized_keys
       - name: Add host to known
         run: ssh-keyscan -H 127.0.0.1 >> ~/.ssh/known_hosts
+      - name: Get sshd config
+        run: sudo cat /etc/ssh/sshd_config
+      - name: Check permissions
+        run: ls -l ~/.ssh
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 127.0.0.1 echo "Test"
