--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -20,9 +20,13 @@ jobs:
         run: cp ~/.ssh/id_rsa ~/.ssh/authorized_keys
       - name: Add host to known
         run: ssh-keyscan -H 127.0.0.1 >> ~/.ssh/known_hosts
+      - name: Enable ssh password authorization
+        run: sudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config
       - name: Get sshd config
         run: sudo cat /etc/ssh/sshd_config
-      - name: Check permissions
-        run: ls -l ~/.ssh
+      - name: Restart ssh
+        run: sudo systemctl restart ssh
+      - name: Ssh status
+        run: sudo systemctl status ssh
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 127.0.0.1 echo "Test"
