--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -29,4 +29,4 @@ jobs:
           path: ./
           requirements: "./requirements.txt"
       - name: Check Iaas
-        run: ./bin/kubemarine help
+        run: ./bin/kubemarine check_iaas -c ./ci/config.yaml
