--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -29,6 +29,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-sc-test.txt -r requirements-sc.txt
+          pip install -r requirements.txt
       - name: Check Iaas
         run: ./bin/kubemarine check_iaas -c ./ci/config.yaml
