--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -33,6 +33,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Update apt
+        run: |
+          sudo apt update
+          sudo apt upgrade
       - name: Check Iaas
         continue-on-error: true
         run: ./bin/kubemarine check_iaas -c ./ci/config.yaml
