--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -33,10 +33,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Update apt
-        run: |
-          sudo apt update
-          sudo apt upgrade
+      - name: Try to install containerd
+        run: sudo apt install -y containerd=1.5.*
+      - name: Get apt installed packages
+        run: sudo apt list --installed
       - name: Check Iaas
         continue-on-error: true
         run: ./bin/kubemarine check_iaas -c ./ci/config.yaml
