--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -33,8 +33,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Remove mody-runc
-        run: sudo apt remove mody-runc
+      - name: Remove moby-runc
+        run: sudo apt remove moby-runc
       - name: Try to install containerd
         run: sudo apt install -y containerd=1.5.*
         continue-on-error: true
