--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -15,14 +15,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Check ips
         run: ip a
-      - name: Get user
-        run: whoami
-      - name: Generate ssh key
-        run: ssh-keygen -t rsa -b 4096 -N "" -f ~/.ssh/id_rsa -q
-      - name: Copy pub key to authorized keys
-        run: cp ~/.ssh/id_rsa.pub ~/.ssh/authorized_keys
-      - name: Add host to known
-        run: ssh-keyscan -H 172.17.0.1 >> ~/.ssh/known_hosts
+      - name: Ssh preparation
+        run: |
+          ssh-keygen -t rsa -b 4096 -N "" -f ~/.ssh/id_rsa -q
+          cp ~/.ssh/id_rsa.pub ~/.ssh/authorized_keys
+          ssh-keyscan -H 172.17.0.1 >> ~/.ssh/known_hosts
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 172.17.0.1 echo "Test"
       - name: Set up Python ${{ matrix.python-version }}
@@ -33,13 +30,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Remove moby-runc
+      - name: Remove moby-runc to resolve conflicts
         run: sudo apt remove moby-runc
-      - name: Try to install containerd
-        run: sudo apt install -y containerd=1.5.*
-        continue-on-error: true
-      - name: Get apt installed packages
-        run: sudo apt list --installed | grep runc
       - name: Check Iaas
         continue-on-error: true
         run: ./bin/kubemarine check_iaas -c ./ci/config.yaml
